# Light_Up

./: CMakeLists.txt  Camera.h  Game.cpp  Game.h  Icon_Renderer.cpp  Icon_Renderer.h  Light_Up.cpp  Object_Renderer.cpp  Object_Renderer.h  Resource_Manager.cpp  Resource_Manager.h  Text_Renderer.cpp  Text_Renderer.h  shader.cpp  shader.h
Shaders/: Icon_fShader.txt  Object_fShader.txt
glad/include/glad/: glad.h
glad/src/: glad.c
